# GymTracker

./: .gitignore  Makefile  README.md  devenv.nix  docker-entrypoint.sh  production.Dockerfile  pyproject.toml  ruff.toml  tailwind.config.js
.github/workflows/: continuous_integration.yml  publish_docker_image.yml
src/backend/: config.py  main.py
src/sports_tracker/: main.py
tests/: test_main.py
tests/backend/: test_main.py
