# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "backend"
version = "0.1.1"
description = "Track how often I do sports."
keywords = ["sports", "tracker"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repositorty = "https://github.com/dmarcoux/sports_tracker"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

# Configure pytest
# https://docs.pytest.org/en/stable/reference/customize.html
# https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests/backend",
]
